# carstino

./: .bash_aliases  .create_db_in_docker_mysql.exp  .do_scp.exp  .do_ssh.exp  .do_ssh_scp.exp  .flake8  .from_here_to_there.sh  .gitignore  .lint.sh  .mg.py  .pipenv_install_while_lock_at_another_process.py  .pipi.py  .pre-commit-config.yaml  .switch_source_pipenv.py  .vimrc  Makefile  Pipfile  README.md  README.pip_conf.md  Vagrantfile  _change_ubuntu_mirror_sources.py  active_aliases_in_zsh.py  build_development_environment.sh  change_ubuntu_mirror_sources.py  change_ubuntu_mirror_sources.sh  cp_site_packages.py  create_ln.py  createdatabase.py  crop.py  did_change_ubuntu_mirror_sources.sh  did_upgrade_py.sh  django_manage.bash  django_manage_completion.bash  edit_pip_conf_updated_at.py  ensure_import.py  frontend_conf.sh  get_venv.py  httpa.sh  init_my_dev.py  init_my_dev.sh  (+22 more)
.github/workflows/: ci.yml  publish.yml
ssh_scripts/: .ssh_server.exp  README.md  add_ssh_scripts_to_home.py  aliyun  aliyun.bash  cp_ssh_key_from_pri_repo.py  cp_ssh_scripts_to_home.py  django-lomi.bash  gullwing  gullwing.bash  romanload.bash  ssh212  ssh212.bash  ssh2123  ssh2123.bash
tests/: check_py2_compare.py  test_box.py  test_upgrade_py.py
