[project]
name = "carstino"
version = "0.3.0"
description = "Personal dev tools"
readme = "README.md"
authors = [{name="Waket Zheng", email="waketzheng@gmail.com>"}]
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 88
exclude = ["node_modules", "*.bak"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
exclude = [
    "^fabfile\\.py$",  # TOML's double-quoted strings require escaping backslashes
    'two\.pyi$',  # but TOML's single-quoted strings do not
    '^\.venv',
    '\.bak',
]
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.uv]
dev-dependencies = [
    "asynctor>=0.6.6",
    "fast-dev-cli>=0.9.10",
    "pymysql>=1.1.1",
    "types-pymysql>=1.1.0.20241103",
]
