[project]
name = "carstino"
version = "0.4.0"
description = "Personal dev tools"
readme = "README.md"
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "asynctor[redis]>=0.8.0,<1",
    "fast-dev-cli>=0.14.0,<1",
    "pymysql>=1.1.1",
    "tqdm>=4.67.1",
    "types-pymysql>=1.1.0.20241103",
    "types-tqdm>=4.67.0.20241221",
    "typer>=0.16.0",
]

[tool.pdm]
distribution = false

[tool.ruff]
line-length = 88
exclude = ["node_modules", "*.bak"]
[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
# Files that support both python2 and python3
"upgrade_py.py" = ["UP"]
"rstrip.py" = ["UP"]
"pyinstall.py" = ["UP"]
"pip_conf.py" = ["UP"]
"pad_brew_download_url.py" = ["UP"]
"new_venv.py" = ["UP"]
"get_venv.py" = ["UP"]
"change_ubuntu_mirror_sources.py" = ["UP"]
"active_aliases_in_zsh.py" = ["UP"]
".pipi.py" = ["UP"]

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
exclude = [
    "^fabfile\\.py$",  # TOML's double-quoted strings require escaping backslashes
    'two\.pyi$',  # but TOML's single-quoted strings do not
    '^\.venv',
    '\.bak',
]
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true
