[project]
name = "pip-conf-mirror"
dynamic = ["version"]
description = "Make it easy to set or change pip/pdm/uv/poetry mirrors."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
requires-python = ">=2.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
readme = "README.pip_conf.md"
dependencies = []

[dependency-groups]
dev = [
    "asynctor[redis]>=0.8.0,<1; python_version >= '3.10'",
    "fast-dev-cli>=0.14.0,<1; python_version >= '3.10'",
    "pymysql>=1.1.1; python_version >= '3.10'",
    "tqdm>=4.67.1; python_version >= '3.10'",
    "types-pymysql>=1.1.0.20241103; python_version >= '3.10'",
    "types-tqdm>=4.67.0.20241221; python_version >= '3.10'",
    "typer>=0.16.0; python_version >= '3.10'",
]

[project.urls]
homepage = "https://github.com/waketzheng/carstino"
repository = "https://github.com/waketzheng/carstino.git"
"Bug Tracker" = "https://github.com/waketzheng/carstino/issues"

[project.scripts]
pip-conf = "pip_conf:main"
pip-conf-mirror = "pip_conf:main"

[tool.pdm]
distribution = true
version = {source="file", path="pip_conf.py"}
py_modules=['pip_conf']
packages=['pip_conf']

[tool.pdm.build]
excludes = ["./**/.git"]
includes = ["pip_conf.py"]
source-includes = ["LICENSE", "PIP_CONF.md"]

[tool.ruff]
line-length = 88
exclude = ["node_modules", "*.bak"]
[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
# Files that support both python2 and python3
"upgrade_py.py" = ["UP"]
"rstrip.py" = ["UP"]
"pyinstall.py" = ["UP"]
"pip_conf.py" = ["UP"]
"pad_brew_download_url.py" = ["UP"]
"new_venv.py" = ["UP"]
"get_venv.py" = ["UP"]
"change_ubuntu_mirror_sources.py" = ["UP"]
"active_aliases_in_zsh.py" = ["UP"]
".pipi.py" = ["UP"]

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
exclude = [
    "^fabfile\\.py$",  # TOML's double-quoted strings require escaping backslashes
    'two\.pyi$',  # but TOML's single-quoted strings do not
    '^\.venv',
    '\.bak',
]
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
up = 'pdm update -G :all'
type = "pdm run mypy ."
tree = 'pdm list --tree {args}'
deps = 'pdm sync -G :all {args}'
prod = 'pdm install --prod --frozen'
fresh = {composite = ["up", "deps"]}
test = 'pdm run fast test'
style = {composite = ["ruff format", "ruff check --fix {args}"]}
check = 'pdm run fast check {args}'
lint = 'pdm run fast lint {args}'
bump = "pdm run fast bump patch --commit {args}"
tag = "pdm run fast tag {args}"
start = {composite = ["pre-commit install", "deps"]}
ci = {composite = ["deps", "check", "test"]}
